@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,25 +16,24 @@
 
 package org.springframework.test.web.servlet.samples.context;
 
-import org.springframework.stereotype.Controller;
 import org.springframework.test.web.Person;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
 
-@Controller
+@RestController
+@RequestMapping("/person")
 public class PersonController {
 
 	private final PersonDao personDao;
 
 
-	public PersonController(PersonDao personDao) {
+	PersonController(PersonDao personDao) {
 		this.personDao = personDao;
 	}
 
-	@RequestMapping(value="/person/{id}", method=RequestMethod.GET)
-	@ResponseBody
+	@GetMapping("/{id}")
 	public Person getPerson(@PathVariable long id) {
 		return this.personDao.getPerson(id);
 	}
